--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "comp308-w2017-midterm",
+  "name": "comp229-S2023-midterm-301282773",
   "description": "## Welcome to the MidTerm Project - the Favourite Book List App",
   "main": "server.js",
   "authors": [
-    "Tom Tsiliopoulos"
+    "Andre Henrique Moyses de Assis"
   ],
   "license": "ISC",
   "keywords": [
