--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp229-f2020-midterm",
+  "name": "comp229-s2023-midterm-301282773",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -25,8 +25,8 @@
     "popper.js": "^1.16.1"
   },
   "engines": {
-    "node": "^10.15.0",
-    "npm": "^6.0.0"
+    "node": "^20.0.0",
+    "npm": "^9.0.0"
   },
   "description": "## Welcome to the MidTerm Project - the Favourite Book List App",
   "main": "server.js",
@@ -52,7 +52,7 @@
     "ExpressJS",
     "EJS"
   ],
-  "author": "Your Name Goes Here",
+  "author": "Andre Henrique Moyses de Assis",
   "license": "ISC",
   "bugs": {
     "url": ""
